tests/rosetta/transpiler/Python/date-manipulation.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/date-manipulation.mochi:183:17: unexpected token "-" (expected PostfixExpr)
  --> /workspace/mochi/tests/rosetta/x/Mochi/date-manipulation.mochi:183:17

183 |   if offEast == -14400 {
    |                 ^

help:
  Parse error occurred. Check syntax near this location.